--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -17,7 +17,7 @@ const allPosts = await Promise.all(
         <span class="text">{text}</span>
         {
             allPosts.map((post: any) => (
-                <a href={post.slug}>
+                <a href=`/${post.slug}`>
                     <div class="post-item" style={`background-image: url(https://s3.syrk.is/${post.cover})`}>
                         <h2>{post.title}</h2>
                     </div>
