--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,3 +34,16 @@ import "/public/global.css";
         height: 100%;
     }
 </style>
+
+<script>
+    document.addEventListener("astro:page-load", () => {
+        const path = window.location.pathname;
+        if (path !== "/") {
+            window.scrollTo({
+                top: 150,
+                left: 0,
+                behavior: "instant",
+            });
+        }
+    });
+</script>
