--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -17,11 +17,13 @@ const allPosts = await Promise.all(
         <span class="text">{text}</span>
         {
             allPosts.map((post: any) => (
+            <div transition:name=`page-${post.slug}`>
                 <a href=`/${post.slug}`>
                     <div class="post-item" style={`background-image: url(https://s3.syrk.is/${post.cover})`}>
                         <h2>{post.title}</h2>
                     </div>
                 </a>
+            </div>
             ))
         }
     </div>
@@ -51,23 +53,10 @@ const allPosts = await Promise.all(
         text-transform: uppercase;
         align-items: center;
         justify-content: center;
-        transition: transform 0.3s ease;
+        transition: transform 1s ease-in-out;
         box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
     }
     .post-item:hover {
         transform: scale(1.05);
     }
 </style>
-
-<script>
-    document.addEventListener("astro:page-load", () => {
-        const path = window.location.pathname;
-        if (path !== "/" && path !== "/code" && path !== "/text") {
-            window.scrollTo({
-                top: 100,
-                left: 0,
-                behavior: "instant",
-            });
-        }
-    });
-</script>
