--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -42,6 +42,11 @@ const { post } = Astro.props;
 </Layout>
 
 <style>
+h1 {
+    text-transform: uppercase;
+}
+
+
 .content{
     width: 80%;
     text-align: center;
