--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,6 +5,16 @@ import Header from "../components/Header.astro";
 
 <Layout>
     <Header />
+    <div class="text" style="text-align: justify; text-align-last: center;">
+        Noah Syrkis's work explores the aesthetics of archives and mathematics, as well as variations on geospatial and
+        organic themes. Working between Copenhagen, Rio de Janeiro, and New York, Noah develops systems that map from
+        complex data to typographics and aesthetics. Through pattern and form, his work examines the relationship
+        between entropy and experience.
+    </div>
 </Layout>
 
-<style></style>
+<style>
+    .text {
+        padding: 10vh 0;
+    }
+</style>
