--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,11 +12,12 @@ import Header from "../components/Header.astro";
             translate complex data into typographic and aesthetic form. His work occupies the space between rigorous
             mathematical structure and organic decay, where patterns emerge and dissolve.
         </p><p>
-            As a researcher in artificial intelligence and cultural geometry, Noah studies complex systems through
-            computational means—from command and control systems to social networks. His work investigates how
-            mathematical patterns emerge in both artificial and organic systems, employing multi-agent simulations and
-            geometric deep learning to explore these dynamics. Through this lens, he examines the mathematical
-            foundations that shape collective behavior and form.
+            As a researcher in artificial intelligence and cultural geometry and through his work at the <a
+                href="https://virian.org"
+                target="_blank"><i>Virian Project</i></a
+            >, Noah studies complex domains by computational means—from command and control systems to social networks.
+            His work investigates how mathematical patterns emerge in both artificial and organic systems, employing
+            multi-agent simulations and geometric deep learning to explore these dynamics.
         </p>
     </div>
 </Layout>
