about page drafft

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,15 +9,16 @@ import Header from "../components/Header.astro";
         <p>
             Noah Syrkis's work explores the aesthetics of archives and mathematics, along with variations on geospatial
             and organic themes. Working across Copenhagen, Rio de Janeiro, and New York, Noah develops systems that
-            translate complex data into typographic and aesthetic form. His work occupies the space between rigorous
-            mathematical structure and organic decay, where patterns emerge and dissolve.
+            translate complex and often stochastic data into visual and physical form. His work occupies a space between
+            structure and decay, where patterns emerge and dissolve.
         </p><p>
             As a researcher in artificial intelligence and cultural geometry and through his work at the <a
                 href="https://virian.org"
                 target="_blank"><i>Virian Project</i></a
-            >, Noah studies complex domains by computational means—from command and control systems to social networks.
-            His work investigates how mathematical patterns emerge in both artificial and organic systems, employing
-            multi-agent simulations and geometric deep learning to explore these dynamics.
+            >, Noah studies complex domains by computational means—from command and control systems to societal
+            networks. His work investigates how mathematical patterns evolve in both artificial and organic systems,
+            employing, among other techniques, multi-agent simulations and geometric deep learning to explore these
+            dynamics.
         </p>
     </div>
 </Layout>
