about page drafft

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,13 +12,13 @@ import Header from "../components/Header.astro";
             translate complex and often stochastic data into visual and physical form. His work occupies a space between
             structure and decay, where patterns emerge and dissolve.
         </p><p>
-            As a researcher in artificial intelligence and through his work at <a
+            As an artificial intelligence researcher and through his work at <a
                 href="https://virian.org"
                 target="_blank"><i>Virian</i></a
             >, Noah studies complex domains by computational means—from command and control systems to cultural geometry
-            and societal networks. His work investigates how mathematical patterns evolve in both artificial and organic
-            systems, employing, among other techniques, mechanistic interpretability and geometric deep learning to
-            explore these dynamics.
+            and societal networks. His work investigates how mathematical patterns evolve and dissolve in both
+            artificial and organic systems, employing, among other techniques, mechanistic interpretability and
+            geometric deep learning to explore these dynamics.
         </p>
     </div>
 </Layout>
