--- a/public/global.css
+++ b/public/global.css
@@ -14,6 +14,7 @@ h1,
 h2,
 h3 {
     /* letter-spacing: 0.01em; */
+    font-size: 2rem;
     text-align: center;
     font-weight: normal;
     margin: 0;
