--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -43,6 +43,7 @@ const text = "These works investigate the visual principles of systems, from arc
         height: 70vh;
         border-radius: 20px;
         background-size: cover;
+        width: 100%;
         background-position: center;
         display: flex;
         text-transform: uppercase;
