--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ const isRoot = Astro.url.pathname === "/";
 ---
 
 <header transition:name="header">
-    <h1>NOAH SYRKIS</h1>
+    <h1><a href="/">NOAH SYRKIS</a></h1>
     <nav>
         <ul>
             <li><a href="/about">about</a></li>
