--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,16 +9,15 @@ import Header from "../components/Header.astro";
         <p>
             Noah Syrkis's work explores the aesthetics of archives and mathematics, along with variations on geospatial
             and organic themes. Working across Copenhagen, Rio de Janeiro, and New York, Noah develops systems that
-            translate complex and often stochastic data into visual and physical form. His work occupies a space between
-            structure and decay, where patterns emerge and dissolve.
+            translate complex and often stochastic processes into visual and physical form. His work occupies a space
+            between structure and decay.
         </p><p>
             As an artificial intelligence researcher and through his work at <a
                 href="https://virian.org"
                 target="_blank"><i>Virian</i></a
-            >, Noah studies complex domains by computational means—from command and control systems to cultural geometry
-            and societal networks. His work investigates how mathematical patterns evolve and dissolve in both
-            artificial and organic systems, employing, among other techniques, mechanistic interpretability and
-            geometric deep learning to explore these dynamics.
+            >, Noah studies complex domains by computational means. From command and control systems to cultural
+            geometry, his work investigates how patterns evolve and dissolve in both artificial and organic systems,
+            employing, among other techniques, mechanistic interpretability and geometric deep learning.
         </p>
     </div>
 </Layout>
