--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -6,7 +6,8 @@ const allPosts = Object.values(import.meta.glob("./posts/*.json", { eager: true 
     a.year < b.year ? 1 : -1,
 );
 
-const text = "These works investigate the visual principles of systems, from archival structures to organic patterns";
+const text =
+    "Exclusive limited edition archival prints are available upon request. For any inquiries, contact us at desk[at]syrkis.com";
 ---
 
 <Layout>
