--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -36,7 +36,7 @@ const { post } = Astro.props;
                             <img src={"https://s3.syrk.is/" + work.cover} alt={work.title} />{" "}
                         </div>
                         <h3>
-                            {work.title}, {post.material}, {post.year}
+                            <i>{work.title}</i>, {post.material}, {post.year}
                         </h3>
                     </div>
                 ))
