--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -2,9 +2,9 @@
 import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
 
-const allPosts = Object.values(import.meta.glob("./posts/*.json", { eager: true })).sort((a, b) =>
-    a.year < b.year ? 1 : -1,
-);
+const allPosts = Object.values(
+    import.meta.glob("./series/*.json", { eager: true }),
+).sort((a, b) => (a.year < b.year ? 1 : -1));
 
 const text =
     "Exclusive limited edition archival prints are available upon request. For any inquiries, contact us at desk[at]syrkis.com";
@@ -18,7 +18,10 @@ const text =
             allPosts.map((post: any) => (
                 <div transition:name={post.slug}>
                     <a href={`/${post.slug}`}>
-                        <div class="post-item" style={`background-image: url(https://s3.syrk.is/${post.cover})`}>
+                        <div
+                            class="post-item"
+                            style={`background-image: url(https://s3.syrk.is/${post.cover})`}
+                        >
                             <h2>{post.title}</h2>
                         </div>
                     </a>
