--- a/src/components/Slides.astro
+++ b/src/components/Slides.astro
@@ -13,7 +13,7 @@ const { filePath } = Astro.props;
     <Typst
         src={filePath}
         remPx={10}
-        props={{ width: "100%", height: "auto" }}
+        props={{ width: "100%", height: "100%" }}
     />
 </div>
 
@@ -73,8 +73,8 @@ const { filePath } = Astro.props;
             filter: invert(1);
         }
     }
-    header,
+    /* header,
     footer {
         display: none;
-    }
+    } */
 </style>
