--- a/src/components/Slides.astro
+++ b/src/components/Slides.astro
@@ -21,7 +21,7 @@ const { filePath } = Astro.props;
     .slides-container {
         text-align: center;
         width: 95%;
-        height: 100vh;
+        /* height: 100vh; */
         margin: 0 auto;
         overflow: hidden;
         /* padding: 2rem; */
@@ -30,7 +30,7 @@ const { filePath } = Astro.props;
     .typst-doc {
         /* margin: auto; */
         margin: auto 0;
-        height: 100vh;
+        /* height: 100vh; */
     }
 </style>
 <script is:inline>
