--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -24,7 +24,7 @@ const text =
                     <a href={`/${post.slug}`}>
                         <div
                             class="post-item"
-                            style={`background-image: url(https://s3.syrk.is/${post.cover})`}
+                            style={`background-image: url(https://syrkis.ams3.cdn.digitaloceanspaces.com/${post.cover})`}
                         >
                             <h2>{post.title}</h2>
                         </div>
