--- a/src/components/Series.astro
+++ b/src/components/Series.astro
@@ -8,7 +8,10 @@ const { post } = Astro.props;
             <div class="work-item">
                 <div class="image-container">
                     <img
-                        src={"https://s3.syrk.is/" + work.cover}
+                        src={
+                            "https://syrkis.ams3.cdn.digitaloceanspaces.com/" +
+                            work.cover
+                        }
                         alt={work.title}
                     />{" "}
                 </div>
